final initial files

--- a/public/css/MainCssFiles.css
+++ b/public/css/MainCssFiles.css
@@ -2,7 +2,7 @@
     font-family: Leckerli One;
     src: url(../Images/LeckerliOne-Regular.ttf);
  }
- 
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Montserrat:wght@100;400;900&family=Ubuntu:ital,wght@0,300;0,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
 :root {
     --header-height: 6rem;
@@ -47,7 +47,7 @@ body {
     overflow-x: hidden;
 }
 
-.header {
+/* .header {
     width: 100%;
     position: fixed;
     top: 0;
@@ -59,7 +59,7 @@ body {
     background-color:#FBFBFB;
     z-index: var(--z-fixed);
     transition: .5s
-}
+} */
 
 
 /* @media (max-width: 568px) {
@@ -72,8 +72,8 @@ body {
     width: 300px;
     padding-top: 8%;
     padding-left: 20px;
-    position: fixed;
-    z-index: 1;
+    /* position: fixed;
+    z-index: 1; */
     top: 0;
     left: 0px;
     text-shadow:#000 ;
@@ -227,7 +227,10 @@ margin-left: 50px;
     text-align: right;
 }
 .containersearch{
-    width: 1160px;
+    display: flex;
+    min-width: 100px;
+    width: 950px;
+    padding: 0 30px;
 }
 .searchinput:focus{
     background-color: #ededee;
@@ -235,10 +238,17 @@ margin-left: 50px;
     color: #000;
 }
 .searchbtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius:0 50px 50px 0;
+    height: 100%;
+    padding-bottom:0 ;
 }
 .bi-search{
     font-size: 20px;
+    position: relative;
+    bottom: 5px;
 }
 .header .cartspan{
     font-weight: bold;
@@ -246,8 +256,8 @@ margin-left: 50px;
     color: #777;
     margin-bottom: 100px;
 }
-.header .bi-cart-plus{
-    font-size:20px;
+.bi-cart-plus{
+    font-size:25px;
 }
 /* @media screen and (min-width: 768px) {
     body {
@@ -365,7 +375,7 @@ footer .nav-item{
 
 .form-control{
     border:     #0D1117;
-    padding: 25px;
+    height: 100%;
     border-radius: 10px;
     color: #222830;
     background-color:#fff;
@@ -396,7 +406,7 @@ footer .nav-item{
     background-color: #FBFBFB;
     border: 2px solid #646A70;
     color: #000;
-    border-radius: 50px;
+    border-radius: 50px 0 0 50px;
 }
 .searchinput:focus{
     background-color: #FBFBFB;
