--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper shrink">
 
         <div class="top_navbar">
             <div class="hamburger">
@@ -75,24 +75,11 @@
 
             <!-- main content -->
             <div class="row">
-                <div class="card-item col-lg-3 col-md-4 col-sm-6">
+                <div class="card-item col-lg-4 col-md-6">
                     <div class="card">
                         <div class="card-header">
                             <img src="https://www.planetware.com/wpimages/2020/02/egypt-in-pictures-beautiful-places-to-photograph-pyramids-of-giza.jpg"
                                 alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>The tree pyramids</h3>
-                            <h2>$49</h2>
-                            <a class="btn btn-lg btn-primary w-100" role="button" href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-item col-lg-3 col-md-4 col-sm-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <img src="https://media.istockphoto.com/photos/the-sphinx-picture-id1130724329" alt="">
                         </div>
                         <div class="card-body">
                             <h3>The tree pyramids</h3>
@@ -102,7 +89,20 @@
                     </div>
                 </div>
 
-                <div class="card-item col-lg-3 col-md-4 col-sm-6">
+                <div class="card-item col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="https://media.istockphoto.com/photos/the-sphinx-picture-id1130724329" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>The tree pyramids</h3>
+                            <h2>$49</h2>
+                            <a class="btn btn-lg btn-primary w-100" role="button" href="/main">Add to cart</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-item col-lg-4 col-md-6">
                     <div class="card">
                         <div class="card-header">
                             <img src="https://i.ytimg.com/vi/ONqJmDN4rAM/maxresdefault.jpg" alt="">
@@ -110,13 +110,13 @@
                         <div class="card-body">
                             <h3>The tree pyramids</h3>
                             <h2>$49</h2>
-                            <a class="btn btn-lg btn-primary w-100" role="button" href="#">Add to cart</a>
+                            <a class="btn btn-lg btn-primary w-100" role="button" href="/sign_in">Add to cart</a>
                         </div>
 
                     </div>
                 </div>
 
-                <div class="card-item col-lg-3 col-md-4 col-sm-6">
+                <div class="card-item col-lg-4 col-md-6">
                     <div class="card">
                         <div class="card-header">
                             <img src="https://s4.reutersmedia.net/resources/r/?m=02&d=20211029&t=2&i=1579603325&w=780&fh=&fw=&ll=&pl=&sq=&r=2021-10-29T223613Z_42247_MRPRC2SFQ97INDQ_RTRMADP_0_EGYPT-HERITAGE-MODERN-ART"
@@ -125,7 +125,7 @@
                         <div class="card-body">
                             <h3>The tree pyramids</h3>
                             <h2>$49</h2>
-                            <a class="btn btn-lg btn-primary w-100" role="button" href="#">Add to cart</a>
+                            <a class="btn btn-lg btn-primary w-100" role="button" href="/sign_up">Add to cart</a>
                         </div>
                     </div>
                 </div>
