--- a/public/css/HomePage.css
+++ b/public/css/HomePage.css
@@ -3,22 +3,12 @@
     margin: 3% 3% ;
     color: #fff;
 }
-
 .phonecat{
     max-width: 20px;
 }
 .homeimage{
     width: 100%;
 }
-
-/* .main-body{
-}
-@media (min-width: 1200px) {
-    .container{
-        max-width: 1600px;
-    }
-} */
-
 .MultiCarousel { 
     float: left; overflow: hidden; padding: 15px; width: 100%; position:relative; }
 .MultiCarousel .MultiCarousel-inner { 
@@ -44,11 +34,9 @@
     height: 50px;
     background-color:#FBFBFB;
     margin: 30px 0 0 30px;
-    /* width: 93%; */
 }
 .homeicon{
     font-size: 25px;
-    /* margin-left: 10px; */
 }
 ul.breadcrumb {
     padding: 12px 30px;
@@ -80,7 +68,6 @@ ul.breadcrumb {
     
     padding:20px 0 20px 0;
     background-color: #FBFBFB;
-
 }
 .checked{
     color: orange;
@@ -113,7 +100,6 @@ ul.breadcrumb {
     height: 90%;
     background-color: #fff;
 }
-
 .productbox:hover{
     transform: scale(1.2);
     transition: .2s;
@@ -131,9 +117,9 @@ ul.breadcrumb {
     .footerwidth p{
         /* height: 50px; */
     }
-    .footerwidth ul{
+    /* .footerwidth ul{
         margin-left: -50px;
-    }
+    } */
   }
 
 .pagination a {
