--- a/views/AddProduct.ejs
+++ b/views/AddProduct.ejs
@@ -5,140 +5,122 @@
     <link rel="stylesheet" href="css/addProductSeller.css">
     <!-- <link rel="stylesheet" href="../CSS files/HomePage.css">  -->
     <!-- <link rel="stylesheet" href="../CSS files/Searching.css"> -->
-</head>
+    </head>
 
-<body id="body-pd">
-    <!-- Side bar -->
-    <%- include("navigation_bar.ejs") -%>
+    <body id="body-pd">
+        <!-- Side bar -->
+        <%- include("navigation_bar.ejs") -%>
 
-    <!-- Side Bar -->
+            <!-- Side Bar -->
 
-    <!--Container Main start-->
-    <div class="nav-header ">
-        <!--- Navbar --->
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid nav-center ">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse"
-                    aria-controls="nvbCollapse">
-                    <i class="bi bi-list"></i>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="nvbCollapse">
-                    <ul class="navbar-nav ">
-                        <a class="nav-link ml-4" href="#"></i>Home</a>
-                        <a class="nav-link ml-4" href="#"></i>Trend</a>
-                        <a class="nav-link ml-4" href="#"></i>Best Price</a>
-                        <a class="nav-link ml-4" href="#"></i>Offers</a>
-                        <a class="nav-link ml-4" href="#"></i>Pages</a>
-                        <a class="nav-link ml-4" href="#"></i>Groups</a>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!--# Navbar #-->
-    </div>
-    <!--Container Main end-->
-    <!-- The Body of the page  -->
-    <div class="container mt-3">
-        <div class="py-5">
-            <div class="col col-lg-8 border py-5 ">
-                <p class="h3 text-muted">Add Product</p>
-                <p>Start selling your your products on website</p>
-                <form>
-                    <div class="row g-3">
-                        <div class="">
-                            <p class="h5 ml-4">Drag and drop a file or select add Image</p>
-                            <div class="upload row ml-3">
-                                <div class="file-upload col-5 col-md">
-                                    <div class="image-upload-wrap">
-                                        <input class="file-upload-input" type='file' onchange="readURL(this);"
-                                            accept="image/*" />
-                                        <div class="text-center py-3"><i class="bi bi-cloud-arrow-up uploadicon"></i>
-                                            <p class="h5">Upload image</p>
-                                        </div>
-                                    </div>
-                                    <div class="file-upload-content">
-                                        <img class="file-upload-image" src="#" alt="your image" />
-                                        <div class="image-title-wrap">
-                                            <button type="button" onclick="removeUpload()" class="remove-image">Remove
-                                                <span class="image-title">Uploaded Image</span></button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="file-upload col-5 col-md">
-                                    <div class="image-upload-wrap">
-                                        <input class="file-upload-input" type='file' onchange="readURL(this);"
-                                            accept="image/*" />
-                                        <div class="text-center py-3"><i class="bi bi-cloud-arrow-up uploadicon"></i>
-                                            <p class="h5">Upload Video</p>
-                                        </div>
-                                    </div>
-                                    <div class="file-upload-content">
-                                        <img class="file-upload-image" src="#" alt="your image" />
-                                        <div class="image-title-wrap">
-                                            <button type="button" onclick="removeUpload()" class="remove-image">Remove
-                                                <span class="image-title">Uploaded Image</span></button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="formcheck mt-4 ml-5">
-                                    <div class="recommendedguideline row">
-                                        <div class="coloredleft col-2"><i
-                                                class="bi bi-exclamation-circle-fill icontip"></i></div>
-                                        <div class="col-10">
-                                            <p>Chech out our <a href="#">Recommended Photo guideline</a> for tips on
-                                                making your product images</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 py-2">
-                            <label for="firstName" name="fname" required class="form-label">Product Name</label>
-                            <input type="text" class="form-control border" id="firstName" required autocomplete="off">
-                        </div>
-                        <div class="col-12 py-2">
-                            <label for="price" class="form-label">Price <span class="text-muted"></span></label>
-                            <input type="Number" class="form-control border" id="email" placeholder="EG 0.00" required>
-                        </div>
-                        <div class="col-12 py-2">
-                            <label for="text" class="form-label">Add a brieve description <span
-                                    class="text-muted"></span></label>
-                            <textarea type="text" class="form-control border" id="desc" placeholder="brieve descripion"
-                                required></textarea>
-                        </div>
-                        <div class="col-12 py-2">
-                            <label for="text" class="form-label">Add full descripion <span
-                                    class="text-muted"></span></label>
-                            <textarea type="text" class="form-control border" cols="30" rows="10" id="fulldescription"
-                                placeholder="add full description" required></textarea>
-                        </div>
-                        <div class="col-12 py-2">
-                            <label for="url" class="form-label">Checkout URL<span class="text-muted"></span></label>
-                            <input type="url" class="form-control border" id="email"
-                                placeholder="http://www.example.com" required>
-                        </div>
-                        <div class="my-2">
-                            <p class="h4 ml-4">Share this Product</p>
-                            <div class="socialIconShare ml-2">
-                                <a href="www.facebook.com" class="sharlink"><i class="bi bi-facebook pl-3"></i></a>
-                                <a href="www.facebook.com" class="sharlink"><i class="bi bi-youtube pl-3"></i></a>
-                                <a href="www.facebook.com" class="sharlink"><i class="bi bi-twitter pl-3"></i></a>
-                                <a href="www.facebook.com" class="sharlink"><i class="bi bi-instagram pl-3"></i></a>
-                                <a href="www.facebook.com" class="sharlink"><i class="bi bi-telegram pl-3"></i></a>
-                            </div>
+            <!--Container Main start-->
+            <div class="nav-header ">
+                <!--- Navbar --->
+                <nav class="navbar navbar-expand-lg ">
+                    <div class="container-fluid nav-center ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse"
+                            aria-controls="nvbCollapse">
+                            <i class="bi bi-list"></i>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-center" id="nvbCollapse">
+                            <ul class="navbar-nav ">
+                                <a class="nav-link ml-4" href="#"></i>Home</a>
+                                <a class="nav-link ml-4" href="#"></i>Trend</a>
+                                <a class="nav-link ml-4" href="#"></i>Best Price</a>
+                                <a class="nav-link ml-4" href="#"></i>Offers</a>
+                                <a class="nav-link ml-4" href="#"></i>Pages</a>
+                                <a class="nav-link ml-4" href="#"></i>Groups</a>
+                            </ul>
                         </div>
                     </div>
-                    <button class="w-100 btn btn-success btn-lg mt-4" type="submit">Share Your Product</button>
-                </form>
+                </nav>
+                <!--# Navbar #-->
             </div>
-        </div>
-    </div>
+            <!--Container Main end-->
+            <!-- The Body of the page  -->
+            <div class="container mt-3">
+                <div class="py-5">
+                    <div class="col col-lg-8 border py-5 ">
+                        <p class="h3 text-muted">Add Product</p>
+                        <p>Start selling your your products on website</p>
+                        <form action="/addProduct" method="post" enctype="multipart/form-data">
+                            <div class="row g-3">
+                                <div class="">
+                                    <p class="h5 ml-4">Drag and drop a file or select add Image</p>
+                                    <div class="upload row ml-3">
+                                        <div class="file-upload col-5 col-md">
+                                            <div class="image-upload-wrap">
+                                                <input class="file-upload-input" type='file' name="image" onchange="readURL(this);" />
+                                                <div class="text-center py-3"><i
+                                                        class="bi bi-cloud-arrow-up uploadicon"></i>
+                                                    <p class="h5">Upload image</p>
+                                                </div>
+                                            </div>
+                                            <div class="file-upload-content">
+                                                <img class="file-upload-image" src="#"/>
+                                                <div class="image-title-wrap">
+                                                    <span class="image-title">Uploaded Image</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 py-2">
+                                    <label for="firstName" name="fname" required class="form-label">Product Name</label>
+                                    <input type="text" class="form-control border" id="firstName" name="name" required
+                                        autocomplete="off">
+                                </div>
+                                <div class="col-12 py-2">
+                                    <label for="price" class="form-label">Price <span class="text-muted"></span></label>
+                                    <input type="Number" class="form-control border" id="email" placeholder="EG 0.00"
+                                        name="price" required>
+                                </div>
+                                <div class="ml-3">
+                                    <label>Catigory Of Products</label>
+                                    <% catigories.forEach(catigory => { %>
+                                        <div class="form-check" id="catigory">
+                                            <input class="form-check-input" type="radio" name="catigory" value="<%= catigory %>" id="<%= catigory %>">
+                                            <label class="form-check-label" for="<%= catigory %>"><%= catigory %></label>
+                                        </div>
+                                    <% }); %>
+                                </div>
+                                <div class="col-12 py-2">
+                                    <label for="text" class="form-label">Add a brief description <span
+                                            class="text-muted"></span></label>
+                                    <textarea type="text" class="form-control border" name="description" id="desc"
+                                        placeholder="brief description" required></textarea>
+                                </div>
+                                <!-- <div class="col-12 py-2">
+                                    <label for="url" class="form-label">Checkout URL<span
+                                            class="text-muted"></span></label>
+                                    <input type="url" class="form-control border" id="email"
+                                        placeholder="http://www.example.com" required>
+                                </div> -->
+                                <div class="my-2">
+                                    <p class="h4 ml-4">Share this Product</p>
+                                    <div class="socialIconShare ml-2">
+                                        <a href="www.facebook.com" class="sharlink"><i
+                                                class="bi bi-facebook pl-3"></i></a>
+                                        <a href="www.facebook.com" class="sharlink"><i
+                                                class="bi bi-youtube pl-3"></i></a>
+                                        <a href="www.facebook.com" class="sharlink"><i
+                                                class="bi bi-twitter pl-3"></i></a>
+                                        <a href="www.facebook.com" class="sharlink"><i
+                                                class="bi bi-instagram pl-3"></i></a>
+                                        <a href="www.facebook.com" class="sharlink"><i
+                                                class="bi bi-telegram pl-3"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="w-100 btn btn-success btn-lg mt-4" type="submit">Share Your Product</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
+            
+            <%- include("footer.ejs") -%>
+                <script type='text/Javascript' src="searching.js"></script>
+    </body>
 
-
-
-    <%- include("footer.ejs") -%>
-    <script type='text/Javascript' src="searching.js"></script>
-</body>
-
-</html>
+    </html>
