--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -43,19 +43,17 @@
                     <div class="py-5">
                         <div class="col-md-7 col-lg-8">
                             <h4 class="mb-3">Sign In</h4>
-                            <form>
+                            <form action="/" method="post">
                                 <div class="row g-3">
                                     <div class="col-12">
-                                        <label for="email" class="form-label">Email <span
-                                                class="text-muted"></span></label>
-                                        <input type="email" class="form-control border" id="email"
+                                        <label for="email" class="form-label">Email</label>
+                                        <input type="email" class="form-control border" name="email" id="email"
                                             placeholder="you@example.com" required>
                                     </div>
 
                                     <div class="col-12">
-                                        <label for="password" class="form-label">passowrd <span
-                                                class="text-muted"></span></label>
-                                        <input type="password" class="form-control border" id="password"
+                                        <label for="password" class="form-label">passowrd</label>
+                                        <input type="password" class="form-control border" name="password" id="password"
                                             placeholder="password" required>
                                         <a href="#" class="nav-link m-auto d-flex flex-row-reverse">Forget Your Password
                                             ?</a>
@@ -67,7 +65,7 @@
                                     <div class="col-12">
                                         <button class=" btn btn-success col-6  btn-lg" type="submit">Sign In</button>
                                     </div>
-                                    <p class="mt-3 col-12">You don't have an account ? <a href="SignUP.html">Sign up</a>
+                                    <p class="mt-3 col-12">You don't have an account ? <a href="/signUp">Sign up</a>
                                     </p>
                                     <div class="signinwith col-12">
                                         <h5 class="d-inline">Sign in with</h5>
