adding profile page

--- a/views/SignUP.ejs
+++ b/views/SignUP.ejs
@@ -131,7 +131,7 @@
                                 <div class="form-check">
                                     <input id="paypal" name="paymentMethod" value="PayPal" type="radio" class="form-check-input"
                                         required>
-                                    <label class="form-check-label" for="paypal">PayPal</label>
+                                    <label class="form-check-label" for="paypal">Master Card</label>
                                 </div>
                             </div>
 
