--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -115,7 +115,7 @@
             </button>
             <ul class="dropdown-menu col-md-5 col-lg-2 text-right" aria-labelledby="dropdownMenuLink">
                 <button class="btn btn-success dropdown-item signinbtn"
-                    onclick="window.location.href='html files/signIn.html'">Sign In</button>
+                    onclick="window.location.href='/main'">Home Page</button>
                 <li><a class="dropdown-item h5" href="/profile">Your Profile</a></li>
                 <li><a class="dropdown-item h5" href="/cart">View cart</a></li>
                 <li><a class="dropdown-item h5" href="/addProduct">Add Product</a></li>
