--- a/views/PersonalProfile.ejs
+++ b/views/PersonalProfile.ejs
@@ -43,37 +43,43 @@
         <div class="col-md-4 col-lg-2 col-xlg-2 col-12">
             <div class="imageinfo d-flex justify-content-center">
                 <div class="imageicon rounded-circle text-center align-self-center ">
-                    <div class="imgcircle"><img src="../Images/3bdo.jpg" alt="ProfileImage" class=" profileImage"></div>
-                    <button class="btn py-2 px-4 my-3 border">Edit Profile</button>
-                    <p class="h3 profilename"> AbdElrahman Shaban</p>
+                    <div class="imgcircle">
+                        <% if(user.img.contentType==''){ %>
+                            <img src="images/user_icon.png">
+                        <% }else { %>
+                            <img src="data:image/<%= user.img.contentType %>;base64,<%= user.img.data.toString('base64') %>" class=" profileImage">
+                        <% } %>
+                    </div>
+                    <!-- <button class="btn py-2 px-4 my-3 border">Edit Profile</button> -->
+                    <p class="h3 profilename"><%= user.fname %> <%= user.lname %></p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-12 personaldetail">
-            <p class="h3 my-3   ">General Information</p>
+            <p class="h3 my-3">General Information</p>
             <div class="d-flex mt-2">
                 <label for="firstName" name="fname" class="form-label col-3">First name</label>
-                <input type="text" class="form-control " value="AbdElrahman">
+                <input type="text" class="form-control " value="<%= user.fname %>">
                 <i class="bi bi-pencil-square mt-4 editfield"></i>
             </div>
             <div class="d-flex mt-2">
                 <label for="lastName" name="fname" class="form-label col-3">Last name</label>
-                <input type="text" class="form-control " value="Shaban">
+                <input type="text" class="form-control " value="<%= user.lname %>">
                 <i class="bi bi-pencil-square mt-4 editfield"></i>
             </div>
             <div class="d-flex mt-2">
                 <label for="Email" name="fname" class="form-label col-3">Email Address</label>
-                <input type="email" class="form-control " value="abdelrhaman@gmail.com">
+                <input type="email" class="form-control " value="<%= user.email %>">
                 <i class="bi bi-pencil-square mt-4 editfield"></i>
             </div>
             <div class="d-flex mt-2">
                 <label for="passowrd" class="form-label col-3">Password</label>
-                <input type="password" class="form-control " value="123456782554">
+                <input type="password" class="form-control " value="xxxxxxxxxxxx">
                 <i class="bi bi-pencil-square mt-4 editfield"></i>
             </div>
             <div class="d-flex mt-2">
                 <label for="number" class="form-label col-3">Phone Number</label>
-                <input type="number" class="form-control " value="0000000000000">
+                <input type="number" class="form-control " value="<%= user.phoneNumber %>">
                 <i class="bi bi-pencil-square mt-4 editfield"></i>
             </div>
             <a href="#" class="nav-link mt-3">Save Changes</a>
@@ -81,12 +87,8 @@
             <div class="d-flex mt-4">
                 <label for="firstName" class="form-label col-3 ">Address</label>
                 <div class="address">
-                    <P class="h5">محافظة البحيرة مركزايتاى البارود منطقة طططططط</P>
+                    <P class="h5"><%= user.address.country %> - <%= user.address.state %> - <%= user.address.street %></P>
                 </div>
-            </div>
-            <div class="d-flex mt-3">
-                <label for="firstName" class="form-label col-3">number</label>
-                <label for="firstName" class="form-label col-3">01000000000000</label>
             </div>
         </div>
     </div>
@@ -97,24 +99,26 @@
                 <div class="imageicon rounded-circle text-center align-self-center ">
                     <p class="h3">NEED HELP ?</p>
                     <p class="h6 profilename">chat with us if you have a question se we can help you</p>
-                    <button class="btn btnchat py-2 mt-5 px-5">Chat us</button>
+                    <!-- <button class="btn btnchat py-2 mt-5 px-5">Chat us</button> -->
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-12 payment">
+        <div class="col-md-6 col-12 payment" style="height: auto;">
             <p class="h3 my-3">Payment Information</p>
             <a href="#" class="nav-link my-4"> Add a payment method</a>
-            <div class="paymentimage d-flex mx-3 border p-4">
-                <img src="../Images/mastercard.jpg" alt="cartimage" class="w-25">
-                <div class="ml-3">
-                    <p class="h2 ml-3 mastertext">Mastercard</p>
-                    <p class="h5 ml-3">Debit card ending with 2144</p>
-                    <div class="d-flex">
-                        <a href="#" class="nav-link text-success">Edit</a>
-                        <a href="#" class="nav-link text-danger">Remove</a>
+            <% user.payments.forEach(payment => { %>
+                <div class="paymentimage d-flex mx-3 my-2 border p-4">
+                    <img src="images/card.png" alt="cartimage" class="w-25">
+                    <div class="ml-3">
+                        <p class="h2 ml-3 mastertext"><%= payment.method %></p>
+                        <p class="h5 ml-3"><%= payment.method %> ending with <%= payment.cardNumber.slice(10,14) %></p>
+                        <div class="d-flex">
+                            <a href="#" class="nav-link text-success">Edit</a>
+                            <a href="#" class="nav-link text-danger">Remove</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            <% }); %>
         </div>
     </div>
 
