--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -101,11 +101,11 @@
     </div>
 
     <!-- dropdown menu  -->
-    <div class="row mr-2">
+    <div class="row mr-2 " >
         <button class="btn col-6"><i class="bi bi-cart-plus"></i></button>
         <div class="cart col-6">
             <!-- Cart Button -->
-            <button class="header_img dropdown-toggle d-inline" data-toggle="dropdown" aria-expanded="false"
+            <button class="header_img dropdown-toggle d-inline-block" data-toggle="dropdown" aria-expanded="false"
                 id="dropdownMenuLink">
                 <% if(user.img.contentType==''){ %>
                     <img src="images/user_icon.png">
@@ -129,7 +129,4 @@
             </ul>
         </div>
     </div>
-
-
-
 </header>
